# get_orfs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  get_orfs.c  get_orfs.h  seqs_to_ints.c  seqs_to_ints.h  test_parallel_encoding.c  test_parallel_encoding.h  translate.h  translate_seq.c  translate_seq.h
tests/: seq.fasta
